yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:1.18-alpine
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
